# 2dgameproject

./: .gitignore.txt  Animation.cpp  Animation.h  Animator.cpp  Animator.h  BetterClock.cpp  BetterClock.h  BigGreenSlime.cpp  BigGreenSlime.h  Button.cpp  Button.h  CMakeLists.txt  Character.cpp  Character.h  CollisionHandler.cpp  CollisionHandler.h  Engine.cpp  GameObject.cpp  GameObject.h  GameState.h  GreenSlime.cpp  GreenSlime.h  MainMenuWindow.cpp  MainMenuWindow.h  MainWindow.cpp  MainWindow.h  NewGameButton.cpp  NewGameButton.h  PlayButton.cpp  PlayButton.h  Player.cpp  Player.h  PlayerArrow.cpp  PlayerArrow.h  PlayerHud.cpp  PlayerHud.h  QuitButton.h  README.md  README.txt  SmallGreenSlime.cpp  (+17 more)
Buttons/: ContinueTheGameButton.cpp  ContinueTheGameButton.h  PlayButton.cpp  PlayButton.h  QuitButtonNew.cpp  QuitButtonNew.h
PlayerCharacter/: Archer.7z
PlayerUpgrades/: DamageUpgrade.cpp  DamageUpgrade.h  DashUpgrade.cpp  DashUpgrade.h  HealthUpgrade.cpp  HealthUpgrade.h  PiercingUpgrade.cpp  PiercingUpgrade.h  SpeedUpgrade.cpp  SpeedUpgrade.h
ProceduralGeneration/: Direction2D.cpp  Direction2D.h  Floor.cpp  Floor.h  ProceduralGenerationAlgorithms.cpp  ProceduralGenerationAlgorithms.h  Random.h  RandomWalkDungeonGenerator.cpp  RandomWalkDungeonGenerator.h  TileMap.cpp  TileMap.h  TileMapVisualiser.cpp  TileMapVisualiser.h  Vector2iHash.h  WallGenerator.cpp  WallGenerator.h
